RESOLVED FIXED134163
Begin work on decoding form data
https://bugs.webkit.org/show_bug.cgi?id=134163
Summary Begin work on decoding form data
Anders Carlsson
Reported 2014-06-21 13:38:22 PDT
Begin work on decoding form data
Attachments
Patch (4.96 KB, patch)
2014-06-21 13:39 PDT, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2014-06-21 13:39:21 PDT
WebKit Commit Bot
Comment 2 2014-06-21 13:41:17 PDT
Attachment 233545 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/mac/LegacySessionStateCoding.cpp:314: This { should be at the end of the previous line [whitespace/braces] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Sam Weinig
Comment 3 2014-06-21 13:52:21 PDT
Comment on attachment 233545 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=233545&action=review > Source/WebKit2/UIProcess/mac/LegacySessionStateCoding.cpp:316 > + uint32_t underlyingEnumValue; > + *this >> underlyingEnumValue; Can this use std::underlying_type<>?
Anders Carlsson
Comment 4 2014-06-21 14:01:54 PDT
Anders Carlsson
Comment 5 2014-06-21 14:02:37 PDT
(In reply to comment #3) > (From update of attachment 233545 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=233545&action=review > > > Source/WebKit2/UIProcess/mac/LegacySessionStateCoding.cpp:316 > > + uint32_t underlyingEnumValue; > > + *this >> underlyingEnumValue; > > Can this use std::underlying_type<>? No, it needs to always use uint32_t.
Note You need to log in before you can comment on or make changes to this bug.