Begin work on decoding form data https://bugs.webkit.org/show_bug.cgi?id=134163

Reviewed by Sam Weinig.

* UIProcess/mac/LegacySessionStateCoding.cpp:
(WebKit::HistoryEntryDataDecoder::operator>>):
(WebKit::HistoryEntryDataDecoder::isValid):
(WebKit::isValidEnum):
(WebKit::decodeFormDataElement):
(WebKit::decodeFormData):
(WebKit::decodeBackForwardTreeNode):

Canonical link: https://commits.webkit.org/152113@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170252 268f45cc-cd09-0410-ab3c-d52691b4dbfc